# limpiaraxess

./: .gitignore  README.md  build.ps1  config.example.json  config.json  log.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
backend/: cleaner_service.py  config_manager.py  i18n.py  logger_service.py  paths.py  security.py
frontend/: main_window.py
scripts/: bump_version.py  generate_version_resource.py  release.ps1
tests/: test_cleaner_service.py  test_i18n.py  test_security.py  test_version_sync.py
